syntax = "proto3";

package kurrentdb.protocol.v2.indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes";

import "indexes/shared.proto";
import "google/protobuf/timestamp.proto";

message IndexCreated {
  google.protobuf.Timestamp timestamp = 1;
  string name = 2;
  string filter = 3;
  repeated IndexField fields = 4;
}

message IndexStarted {
  google.protobuf.Timestamp timestamp = 1;
  string name = 2;
}

message IndexStopped {
  google.protobuf.Timestamp timestamp = 1;
  string name = 2;
}

message IndexDeleted {
  google.protobuf.Timestamp timestamp = 1;
  string name = 2;
}
